[package]
name = "path_walker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.24"
lazy_static = "1.4.0"
log = "0.4.17"
ocl = "0.19.4"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
mimalloc = "0.1.37"
simd-json = { version = "0.9.2", features = ["allow-non-simd"] }
